add_executable(INTEGRATION_TEST
    test.cpp
    gridworld.cpp
    gridworld_test.cpp
    game_environment_test.cpp
)
target_link_libraries(INTEGRATION_TEST
    PRIVATE
        snake_game
        GTest::gtest_main
)
gtest_discover_tests(INTEGRATION_TEST)

add_executable(GUI_TEST
    gui_test.cpp
)
target_link_libraries(GUI_TEST
    PRIVATE
        gui
        ${CURSES_LIBRARIES}
)
