add_executable(UNIT_TEST
    test.cpp
    snake_tests.cpp
    policy_tests.cpp
    action_valuer_tests.cpp
    learner_tests.cpp
    agent_tests.cpp
    agent_factory_tests.cpp
    food_tests.cpp
    game_environment_test.cpp
    state_action_map_test.cpp
    io_test.cpp
    menu_tests.cpp
    parallel_trainer_tests.cpp
)
target_link_libraries(UNIT_TEST
    PRIVATE
        snake_game
        gui
        GTest::gmock
        GTest::gtest_main
)

gtest_discover_tests(UNIT_TEST)
